refactor: order fields in tests/types/schemas, require all fields for most tests
