# utils/api/definitions/fields.ts
@@ -4,14 +4,14 @@ import { FieldCategory } from './enums'
 export enum FieldKey {
   INCOME = 'income',
   AGE = 'age',
+  MARITAL_STATUS = 'maritalStatus',
   LIVING_COUNTRY = 'livingCountry',
   LEGAL_STATUS = 'legalStatus',
   LEGAL_STATUS_OTHER = 'legalStatusOther',
   YEARS_IN_CANADA_SINCE_18 = 'yearsInCanadaSince18',
-  MARITAL_STATUS = 'maritalStatus',
-  PARTNER_INCOME = 'partnerIncome',
-  PARTNER_BENEFIT_STATUS = 'partnerBenefitStatus',
   EVER_LIVED_SOCIAL_COUNTRY = 'everLivedSocialCountry',
+  PARTNER_BENEFIT_STATUS = 'partnerBenefitStatus',
+  PARTNER_INCOME = 'partnerIncome',
 }
 
 export enum FieldType {
